src/workspace/views/Workspace.scss
@use "../../styles/utilities/toolbar" as toolbar;
@use "../../styles/settings/variables" as variables;

.p-my-workspace__action-placeholder {
	display: inline-block;
	min-height: 36px;
}

.m-workspace {
	padding-bottom: variables.$g-spacer-unit * 10;

	@media screen and (max-width: (variables.$g-bp2 - 1)) {
		.c-navbar .c-toolbar {
			@include toolbar.blockifyToolbar();
		}
	}

	.c-navbar .c-toolbar {
		overflow-x: auto;
		overflow-y: hidden;
	}

	.c-tab-select {
		width: 100%;
	}

	.c-select__single-value,
	.c-select__option {
		display: grid;
		gap: variables.$g-spacer-unit;
		grid-template-columns: auto auto;

		.c-pill {
			align-self: center;
			margin-left: auto;
		}
	}

	.c-tooltip {
		max-width: 19rem;
		width: max-content;
	}
}

